src/objects/Log_Message__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log Level</label>
        <referenceTo>Log_Level__c</referenceTo>
        <relationshipName>log_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logger__c</fullName>
        <label>Logger</label>
        <referenceTo>Logger__c</referenceTo>
        <relationshipName>Log_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mesage__c</fullName>
        <label>Mesage</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_Stamp__c</fullName>
        <label>Time Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>log_Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Class_Name__c</columns>
        <columns>Logger__c</columns>
        <columns>LogLevel__c</columns>
        <columns>Mesage__c</columns>
        <columns>Time_Stamp__c</columns>
        <columns>User__c</columns>
        <columns>Stack_Trace__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Log Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>